refactored according to sonar cloud.